--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@
     padding: 0px;
     margin: 0px;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
+body {
+    font-family: 'Poppins', sans-serif;
+  background-color: #111;  
+}
